Changelog
=========


2.3.5 (unreleased)
------------------

- Added NoCheckedOutDocs Validator to the CompleteTaskSuccessor form.
  Issue #1516 Problem "Ueberweisen von ausgecheckten Dokumenten"
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1516
  [phgross]

- Adjust transitioncontroller: don't check the guard conditions for administrators.
  Issue #1433 Administrator: pruefen, ob er auch Aufgaben bearbeiten koennen soll
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1433
  [phgross]

- Change tablesource of related_documents from TableSource to
  CatalogTableSource and outsource the view to a related_documents.
  Issue #1503 Dokumentenauflistungen: Einfügen Spalte Dokumentenlaufnummer
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1503/

- Set the response contenttype correctly, to avoid problems with diazo themes on remote requests.
  Issue #6 Richtigen Content-Type auf der Response bei remote requests zwischen Clients setzen
  https://extranet.4teamwork.ch/intranet/08-produkte-kurse/4teamwork-gever-1/tracker-4teamwork-gever/6
  [phgross]

- Let the task provide the ISendableDocsContainer marker behavior.
  Issue #1568 Dokument aus Aufgabe versenden resp. kopieren
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1568
  [phgross]

- Add check to attachable_documents_vocabulary: which check that all term values are unique.
  [phgross]

- Adjust use of title accessors (decoding), since dexterity update it returns always utf-8.
  Issue #1420 Plone Version und Dexterity Version auf aktuellste Version heben.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1420
  [phgross]

- User get_css_class instead of deprecated method: css_class_from_obj/css_class_from_brain
  [eschmutz]


2.3.4 (2012-03-28)
------------------

- Made requests to remote clients more robust in case of conflict errors on the sender side.