@@ -7,3 +7,4 @@ package-name = opengever.task
 
 [sources]
 opengever.task = git gitolite@git.4teamwork.ch:testing/fanky.git
+ftw.testing = git git@github.com:4teamwork/ftw.testing.git
